# cronch

./: .gitignore  README.md
firmware/: Cargo.toml  shell.nix
firmware/.cargo/: config
firmware/.direnv/: nix-profile-.1421.e9ade2c8240  nix-profile-.1421.e9ade2c8240.rc
firmware/nix_stuff/: rp_openocd.drv
firmware/src/: double_buf.rs  init.rs  main.rs  panic.rs  tlv320.rs  ui.rs
firmware/src/audio/: i2s.rs  mod.rs  tlv320.rs
firmware/src/ui/: expanders.rs  knob.rs  led_strip.rs  mod.rs
pcb/effectpedal/: #auto_saved_files#  _autosave-effectpedal.kicad_pcb  audio.kicad_sch  audio.kicad_sch-bak  effectpedal.csv  effectpedal.kicad_pcb  effectpedal.kicad_prl  effectpedal.kicad_sch  effectpedal.xml  fp-info-cache  leds.kicad_sch  sym-lib-table  ui.kicad_sch  ui.kicad_sch-bak
pcb/effectpedal/fabrication/: .~lock.effectpedal_bom.xlsx#  effectpedal-top-pickplace.txt  effectpedal-top-pos.ods  effectpedal.d356  effectpedal_bom.xlsx
pcb/effectpedal/footprints/: ADP5587ACPZ-R7.mod  CUI_DEVICES_TS04-66-43-BK-100-SMT.step  ECE1088-DZK.mod  ECE1088-DZK.stp  IS31FL3218-GRLS2.mod  IS31FL3218-GRLS2.stp  IS31FL3728-QFLS2-TR.mod  IS31FL3728-QFLS2-TR.stp  IS66WVS2M8ALL-104NLI.mod  IS66WVS2M8ALL-104NLI.stp  MODULE_SC0915.kicad_mod  PCAL6524HEAZ.stp  PTS810SJG250SMTRLFS.kicad_mod  PTV09A-4020U-B103.mod  PTV09A4015FB103.kicad_mod  QFN50P400X400X80-25N-D.kicad_mod  QFN50P500X500X100-29N-D.kicad_mod  QFN50P500X500X100-33N.kicad_mod  QFN50P500X500X60-33N-D.kicad_mod  (+12 more)
proposal/: proposal.tex
proposal/images/: block_diagram.odg
purepath/effectspedal/: ~effectspedal.pfw
(+131 files in other folders)
