[package]
name = "effectpedal"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "effectpedal"
test = false

[dependencies]
rp2040-hal = "0.7.0"
rp-pico = "0.6.0"
cortex-m = "0.7.2"
cortex-m-rt = "0.7"
embedded-hal ="0.2.5"
panic-halt= "0.2.0"

[profile.dev]
codegen-units = 1 # better optimizations
debug = 2 # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
overflow-checks = false
opt-level = 3

[profile.release]
codegen-units = 1 # better optimizations
debug = 2 # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
overflow-checks = false
opt-level = 3
