[package]
name = "cronch"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cronch"
test = false

[dependencies]
rp2040-hal = "0.7.0"
pio-proc = "0.2"
pio = "0.2"
rp-pico = "0.6.0"
cortex-m = "0.7.2"
cortex-m-rt = "0.7"
embedded-hal ="0.2.5"
panic-halt= "0.2.0"
fugit = "0.3.6"
debugless-unwrap = "0.0.4"

[profile.dev]
codegen-units = 1 # better optimizations
debug = 2 # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
overflow-checks = false
opt-level = 3

[profile.release]
codegen-units = 1 # better optimizations
debug = 2 # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
overflow-checks = false
opt-level = 3

[features]
headless = [] # feature has no explicit dependencies